# hdf5-rust

./: .gitignore  .gitmodules  .travis.yml  .version-bump.sh  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  build.rs  rustfmt.toml
.github/workflows/: ci.yml
ci/: appveyor.py
examples/: chunking.rs  read_write_mpi.rs  read_write_ndarray.rs  read_write_ndarray_mpi.rs  read_write_ndarray_slice.rs  read_write_serial.rs  simple.rs
ext/lzf/: lzfP.h
hdf5/: Cargo.toml  build.rs
hdf5-derive/: Cargo.toml  README.md
hdf5-derive/src/: lib.rs
hdf5-derive/tests/: compile-test.rs  test.rs
hdf5-derive/tests/compile-fail/: empty-enum.rs  empty-enum.stderr  empty-struct.rs  empty-struct.stderr  empty-tuple-struct.rs  empty-tuple-struct.stderr  enum-no-repr.rs  enum-no-repr.stderr  enum-non-scalar.rs  enum-non-scalar.stderr  pd-empty-struct.rs  pd-empty-struct.stderr  pd-empty-tuple-struct.rs  pd-empty-tuple-struct.stderr  struct-c-repr.rs  struct-c-repr.stderr  struct-no-repr.rs  struct-no-repr.stderr  tuple-struct-c-repr.rs  tuple-struct-c-repr.stderr  tuple-struct-no-repr.rs  tuple-struct-no-repr.stderr  unit-struct.rs  unit-struct.stderr
hdf5-rs/: Cargo.toml  build.rs
hdf5-rs/src/: class.rs  container.rs  dataset.rs  datatype.rs  dim.rs  error.rs  file.rs  filters.rs  globals.rs  group.rs  handle.rs  lib.rs  location.rs  macros.rs  new_datatype.rs  object.rs  plist.rs  prelude.rs  space.rs  sync.rs  test.rs  util.rs
hdf5-rs/src/hl/: container.rs  dataset.rs  datatype.rs  file.rs  group.rs  location.rs  mod.rs  object.rs  plist.rs  space.rs
hdf5-rs/src/hl/plist/: file_access.rs  file_create.rs
hdf5-rs/src/plist/: file_create.rs  mod.rs
hdf5-rs/tests/: test_dataset.rs  test_plist.rs
hdf5-rs/tests/common/: gen.rs  util.rs
hdf5-src/: Cargo.toml  README.md  build.rs
hdf5-src/src/: lib.rs
hdf5-sys/: Cargo.toml  README.md  build.rs
hdf5-sys/src/: h5.rs  h5a.rs  h5ac.rs  h5c.rs  h5d.rs  h5do.rs  h5e.rs  h5es.rs  h5f.rs  h5fd.rs  h5g.rs  h5i.rs  h5l.rs  h5mm.rs  h5o.rs  h5p.rs  h5pl.rs  h5r.rs  h5s.rs  h5t.rs  h5vl.rs  h5z.rs  lib.rs
hdf5-types/: Cargo.toml  README.md  build.rs
hdf5-types-derive/: Cargo.toml
hdf5-types-derive/src/: lib.rs
hdf5-types-derive/tests/: test.rs
hdf5-types-derive/tests/compile-fail/: empty-enum.rs  empty-struct.rs  empty-tuple-struct.rs  enum-no-repr.rs  enum-non-scalar.rs  pd-empty-struct.rs  pd-empty-tuple-struct.rs  struct-c-repr.rs  tuple-struct-c-repr.rs  unit-struct.rs
hdf5-types/src/: array.rs  complex.rs  dyn_value.rs  error.rs  h5type.rs  lib.rs  references.rs  string.rs
hdf5/examples/: simple.rs  stuff.py  stuff.rs
hdf5/src/: class.rs  error.rs  globals.rs  handle.rs  hl.rs  lib.rs  macros.rs  sync.rs  test.rs  util.rs
hdf5/src/hl/: attribute.rs  chunks.rs  container.rs  dataset.rs  dataspace.rs  datatype.rs  extents.rs  file.rs  filters.rs  group.rs  location.rs  object.rs  plist.rs  selection.rs
hdf5/src/hl/filters/: blosc.rs  lzf.rs
hdf5/src/hl/plist/: common.rs  dataset_access.rs  dataset_create.rs  file_access.rs  file_create.rs  link_create.rs
hdf5/src/hl/references/: legacy.rs  mod.rs  modern.rs  standard.rs
hdf5/tests/: test_dataset.rs  test_datatypes.rs  test_modern_references.rs  test_object_references.rs  test_plist.rs  test_references.rs
hdf5/tests/common/: gen.rs  util.rs
libhdf5-lib/: Cargo.toml  build.rs
libhdf5-lib/src/: lib.rs
libhdf5-sys/: Cargo.toml  build.rs  hdf5_version.rs
libhdf5-sys/src/: h5.rs  h5a.rs  h5ac.rs  h5c.rs  h5d.rs  h5e.rs  h5f.rs  h5fd.rs  h5g.rs  h5i.rs  h5l.rs  h5mm.rs  h5o.rs  h5p.rs  h5pl.rs  h5r.rs  h5s.rs  h5t.rs  h5z.rs  lib.rs
licenses/: hdf5.txt
remutex/: Cargo.toml
remutex/src/: lib.rs  poison.rs  remutex.rs  unix.rs  windows.rs
src/: class.rs  container.rs  dataset.rs  datatype.rs  dim.rs  error.rs  file.rs  filters.rs  globals.rs  group.rs  handle.rs  hl.rs  lib.rs  location.rs  macros.rs  mutex.rs  new_datatype.rs  object.rs  plist.rs  prelude.rs  space.rs  sync.rs  test.rs  types.rs  util.rs
src/ffi/: h5.rs  h5a.rs  h5ac.rs  h5c.rs  h5d.rs  h5e.rs  h5f.rs  h5fd.rs  h5g.rs  h5i.rs  h5l.rs  h5o.rs  h5p.rs  h5r.rs  h5s.rs  h5t.rs  h5z.rs  macros.rs  mod.rs  util.rs
src/ffi/drivers/: core.rs  mod.rs  sec2.rs  stdio.rs
src/hl/: attribute.rs  container.rs  dataset.rs  dataset2.rs  dataspace.rs  datatype.rs  extents.rs  file.rs  filters.rs  group.rs  location.rs  mod.rs  object.rs  plist.rs  selection.rs  space.rs
src/hl/filters/: blosc.rs  lzf.rs
src/hl/plist/: common.rs  dataset_access.rs  dataset_create.rs  file_access.rs  file_create.rs  link_create.rs
src/types/: array.rs  array_trait.rs  fixed_string.rs  h5def.rs  h5type.rs  mod.rs  string.rs  string_traits.rs  value_type.rs  varlen_array.rs  varlen_string.rs
tests/: test_attribute.rs  test_dataset.rs  test_datatypes.rs  test_plist.rs  tests.rs
tests/common/: gen.rs  macros.rs  mod.rs  util.rs
