[package]
name = "hdf5-derive"
version = "0.5.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license = "MIT/Apache-2.0"
description = "Derive macro for HDF5 structs and enums."
repository = "https://github.com/aldanor/hdf5-rust"
homepage = "https://github.com/aldanor/hdf5-rust"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["derive", "extra-traits"]}

[dev-dependencies]
compiletest_rs = { version = "0.3.18", features = ["stable"] }
hdf5 = { version = "0.5.0", path = ".." }
