[package]
name = "hdf5-derive"
description = "Derive macro for HDF5 structs and enums."
categories = ["procedural-macro-helpers"]
readme = "README.md"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1.0", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive", "extra-traits"]}

[dev-dependencies]
trybuild = "1.0"
hdf5 = { version = ">=0.7.1", path = "../hdf5" }
