[package]
name = "hdf5-rs"
version = "0.2.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Thread-safe Rust bindings for the HDF5 library."
repository = "https://github.com/aldanor/hdf5-rs"
homepage = "https://github.com/aldanor/hdf5-rs"
build = "build.rs"
edition = "2018"

[lib]
name = "h5"

[dependencies]
bitflags = "1.0"
lazy_static = "1.2"
libc = "0.2"
parking_lot = "0.7"
ndarray = "0.12"
num-integer = "0.1"
num-traits = "0.2"
libhdf5-lib = { path = "../libhdf5-lib", version = "0.2.0" }
libhdf5-sys = { path = "../libhdf5-sys", version = "0.2.0" }
hdf5-types = { path = "../hdf5-types", version = "0.2.0" }
hdf5-derive = { path = "../hdf5-derive", version = "0.2.0" }

[dev-dependencies]
rand = "0.6"
regex = "1.1"
scopeguard = "1.0"
tempdir = "0.3"

[build-dependencies]
libhdf5-lib = { path = "../libhdf5-lib", version = "0.2.0" }

[features]
# Use static HDF5 libs downloaded from conda.
conda = ["libhdf5-lib/conda"]