[package]
name = "hdf5-src"
version = "0.8.1"  # !V
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license-file = "ext/1_13/COPYING"
build = "build.rs"
repository = "https://github.com/aldanor/hdf5-rust"
homepage = "https://github.com/aldanor/hdf5-rust"
description = "Build script for compiling HDF5 C library from source."
edition = "2018"
links = "hdf5src"
readme = "README.md"
categories = ["ffi"]
exclude = [
    "ext/*/bin/**",
    "ext/*/c++/**",
    "ext/*/examples/**",
    "ext/*/fortran/**",
    "ext/*/java/**",
    "ext/*/release_docs/**",
    "ext/*/test/**",
    "ext/*/testpar/**",
    "ext/*/tools/**",
    "ext/*/m4/**",
    "ext/*/configure",
    "ext/*/MANIFEST",
    "ext/*/hl/test/**",
    "ext/*/hl/tools/**",
    "ext/*/hl/examples/**",
    "ext/*/hl/fortran/**",
    "ext/*/hl/c++/**",
    "ext/*/oxygen/**",
    "ext/*/doxygen/**",
    "ext/*/config/cmake_ext_mod/hdf.icns",
]

[features]
hl = []
zlib = ["libz-sys"]
deprecated = []
threadsafe = []
1_10 = []
1_12 = []
1_14 = []

[dependencies]
libz-sys = { version = "1.0.25", features = ["static", "libc"], optional = true, default-features=false }

[build-dependencies]
cmake = "0.1.44"
