[package]
name = "hdf5-src"
license-file = "ext/hdf5/COPYING"
build = "build.rs"
description = "Build script for compiling HDF5 C library from source."
links = "hdf5src"
readme = "README.md"
categories = ["ffi"]
exclude = [
    "ext/hdf5/bin/**",
    "ext/hdf5/c++/**",
    "ext/hdf5/examples/**",
    "ext/hdf5/fortran/**",
    "ext/hdf5/java/**",
    "ext/hdf5/release_docs/**",
    "ext/hdf5/test/**",
    "ext/hdf5/testpar/**",
    "ext/hdf5/tools/**",
    "ext/hdf5/hl/test/**",
    "ext/hdf5/hl/tools/**",
    "ext/hdf5/hl/examples/**",
]
version.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
hl = []
zlib = ["dep:libz-sys"]
deprecated = []
threadsafe = []

[dependencies]
libz-sys = { workspace = true, optional = true, features = ["static", "libc"] }

[build-dependencies]
cmake = "0.1"
