[package]
name = "hdf5-sys"
version = "0.8.1"  # !V
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license = "MIT OR Apache-2.0"
build = "build.rs"
repository = "https://github.com/aldanor/hdf5-rust"
homepage = "https://github.com/aldanor/hdf5-rust"
description = "Native bindings to the HDF5 library."
edition = "2018"
links = "hdf5"
readme = "README.md"

[dependencies]
libc = "0.2"
mpi-sys = { version = "0.1", optional = true }
libz-sys = { version = "1.0.25", optional = true, default-features = false }
hdf5-src = { path = "../hdf5-src", version = "0.8.1", optional = true }  # !V

# Please see README for further explanation of these feature flags
[features]
default = []
mpio = ["mpi-sys"]
hl = ["hdf5-src/hl"]
threadsafe = ["hdf5-src/threadsafe"]
zlib = ["libz-sys", "hdf5-src/zlib"]
static = ["hdf5-src"]
deprecated = ["hdf5-src/deprecated"]

[build-dependencies]
libloading = "0.7"
regex = { version = "1.3", features = ["std"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
serde = "1.0"
serde_derive = "1.0"
winreg = { version = "0.10", features = ["serialization-serde"]}

[package.metadata.docs.rs]
features = ["static", "zlib"]
