[package]
name = "hdf5-sys"
build = "build.rs"
description = "Native bindings to the HDF5 library."
links = "hdf5"
readme = "README.md"
categories = ["ffi", "filesystem", "science"]
version.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
libc = "0.2"
mpi-sys = { version = "0.1", optional = true }
libz-sys = { version = "1.0.25", optional = true, default-features = false }
hdf5-src = { path = "../hdf5-src", version = "0.8.1", optional = true }  # !V

# Please see README for further explanation of these feature flags
[features]
default = []
mpio = ["mpi-sys"]
hl = ["hdf5-src/hl"]
threadsafe = ["hdf5-src/threadsafe"]
zlib = ["libz-sys", "hdf5-src/zlib"]
static = ["hdf5-src"]
deprecated = ["hdf5-src/deprecated"]

[build-dependencies]
libloading = "0.7"
regex = { version = "1.3", features = ["std"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
serde = "1.0"
serde_derive = "1.0"
winreg = { version = "0.10", features = ["serialization-serde"]}

[package.metadata.docs.rs]
features = ["static", "zlib"]
