[package]
name = "hdf5-types"
description = "Native Rust equivalents of HDF5 types."
readme = "README.md"
build = "build.rs"
categories = ["encoding"]
version.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
h5-alloc = []

[dependencies]
ascii = "1.0"
libc = "0.2"
hdf5-sys = { version = "0.8.1", path = "../hdf5-sys" }  # !V
cfg-if = "1.0.0"

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }
unindent = "0.1"
