[package]
name = "hdf5-types"
description = "Native Rust equivalents of HDF5 types."
readme = "README.md"
build = "build.rs"
categories = ["encoding"]
version.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
h5-alloc = []
complex = ["num-complex"]

[dependencies]
ascii = "1.1"
cfg-if = { workspace = true }
hdf5-sys = { workspace = true }
libc = { workspace = true }
num-complex = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }
unindent = "0.2"
