[package]
name = "libhdf5-lib"
version = "0.1.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license = "MIT/Apache-2.0"
build = "build.rs"
repository = "https://github.com/aldanor/hdf5-rs"
description = "Build script support for the HDF5 library"

[lib]
name = "libhdf5_lib"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
