[package]
name = "libhdf5-lib"
version = "0.2.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license = "MIT/Apache-2.0"
build = "build.rs"
repository = "https://github.com/aldanor/hdf5-rs"
homepage = "https://github.com/aldanor/hdf5-rs"
description = "Build script support for the HDF5 library."
edition = "2018"

[build-dependencies]
bindgen = "0.47"
lazy_static = "1.2"
libloading = "0.5"

[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
serde = "1.0"
serde_derive = "1.0"
winreg = { version = "0.6", features = ["serialization-serde"]}
