[package]
name = "libhdf5-sys"
version = "0.1.1"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license = "MIT/Apache-2.0"
build = "build.rs"
links = "hdf5"
repository = "https://github.com/aldanor/hdf5-rs"
description = "Native bindings to the HDF5 library"

[lib]
name = "libhdf5_sys"

[dependencies]
libc = "0.2.6"

[build-dependencies]
pkg-config = "0.3.6"
