[package]
name = "libhdf5-sys"
version = "0.2.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license = "MIT/Apache-2.0"
build = "build.rs"
repository = "https://github.com/aldanor/hdf5-rs"
homepage = "https://github.com/aldanor/hdf5-rs"
description = "Native bindings to the HDF5 library."
edition = "2018"

[lib]
name = "libhdf5_sys"

[dependencies]
libc = "0.2"
cfg-if = "0.1"
libhdf5-lib = { path = "../libhdf5-lib", version = "0.2.0" }

[build-dependencies]
libhdf5-lib = { path = "../libhdf5-lib", version = "0.2.0" }
